# simod-job-controller

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
src/simod_job_controller/: main.py
src/simod_queue_worker/: main.py
