[tool.poetry]
name = "simod-queue-worker"
version = "0.1.0"
description = "Simod worker that handles job requests from the queue"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
kubernetes = "^26.1.0"


[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
