[tool.poetry]
name = "simod-job-controller"
version = "0.2.1"
description = "Worker that runs Simod jobs received from a broker"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
kubernetes = "^26.1.0"


[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
